--- a/src/View/view.css
+++ b/src/View/view.css
@@ -23,13 +23,13 @@
 }
 
 .background {
-    -fx-background-image: url("../img/5.jpg");
+    -fx-background-image: url("img/5.jpg");
     -fx-background-repeat: no-repeat;
     -fx-background-size: stretch;
 }
 
 .image{
-    -fx-background-image: url("../img/male2.jpg");
+    -fx-background-image: url("img/male2.jpg");
     -fx-background-repeat: no-repeat;
     -fx-background-size: stretch;
 }
