--- a/src/View/view.css
+++ b/src/View/view.css
@@ -9,7 +9,7 @@
     -fx-background-radius: 9,8,5,4,3;
     -fx-padding: 10 20 10 20;
     -fx-font-family: "Helvetica";
-    -fx-font-size: 18px;
+    -fx-font-size: 1.3em;
     -fx-font-weight: bold;
     -fx-text-fill: white;
     -fx-effect: dropshadow( three-pass-box , rgba(255,255,255,0.2) , 1, 0.0 , 0 , 1);
@@ -39,7 +39,7 @@
 }
 
 /*tab background*/
-#leftTabPane > .tab-header-area > .headers-region > .tab:top {
+.my-tab-pane > .tab-header-area > .headers-region > .tab:top {
     -fx-border-color: #a3a7a8;
     -fx-border-radius: 5 5 0 0;
     -fx-background-color: white;
@@ -48,7 +48,7 @@
 }
 
 /*selected tab backround*/
-#leftTabPane > .tab-header-area > .headers-region > .tab:selected:top {
+.my-tab-pane > .tab-header-area > .headers-region > .tab:selected:top {
     -fx-border-color: black #a3a7a8 #a3a7a8 #a3a7a8;
     -fx-border-width: 5 1 1 1;
     -fx-border-radius: 5 5 0 0;
@@ -58,21 +58,21 @@
 }
 
 /*text in selected tab*/
-#leftTabPane > .tab-header-area > .headers-region > .tab:selected > .tab-container > .tab-label {
+.my-tab-pane > .tab-header-area > .headers-region > .tab:selected > .tab-container > .tab-label {
     -fx-alignment: CENTER;
     -fx-text-fill: black;
     -fx-font-weight: bold;
 }
 
 /*text in non selected tabs*/
-#leftTabPane > .tab-header-area > .headers-region > .tab > .tab-container > .tab-label {
+.my-tab-pane > .tab-header-area > .headers-region > .tab > .tab-container > .tab-label {
     -fx-alignment: CENTER;
     -fx-text-fill: black;
     -fx-font-weight: bold;
 }
 
 /*header background*/
-#leftTabPane > .tab-header-area > .tab-header-background {
+.my-tab-pane > .tab-header-area > .tab-header-background {
     -fx-background-color:white;
     -fx-border-color: #a3a7a8;
     -fx-border-width: 0 0 1 0;
@@ -80,7 +80,7 @@
     -fx-pref-height: 45px;
 }
 
-#leftTabPane:focused > .tab-header-area > .headers-region > .tab:selected .focus-indicator {
+.my-tab-pane:focused > .tab-header-area > .headers-region > .tab:selected .focus-indicator {
     -fx-border-width: 1, 1;
     -fx-border-color: -fx-focus-color, -fx-faint-focus-color;
     -fx-border-insets: -4 -4 -6 -5, -2 -2 -5 -3;
@@ -88,6 +88,107 @@
 }
 
 .labelText{
-    -fx-font-size: 16;
+    -fx-font-size: 1.2em;
     -fx-font-weight: bold;
+}
+
+.date{
+    -fx-font-weight: bold;
+}
+
+
+
+.titled-pane
+{
+    -fx-text-fill: -fx-text-base-color;
+}
+
+.titled-pane:focused
+{
+
+}
+.titled-pane > .title
+{
+    -fx-background-color: #ffb5b5, #ffb5b5, #ffc6c6;
+    -fx-background-insets: 0, 1, 2;
+    -fx-background-radius: 5 5 0 0, 4 4 0 0, 3 3 0 0;
+    -fx-padding: 0.166667em 0.833333em 0.25em 0.833333em; /* 2 10 3 10 */
+}
+
+.green-arrow > .title
+{
+    -fx-background-color: #c0ff7c, #c0ff7c, #e4ffc6;
+    -fx-background-insets: 0, 1, 2;
+    -fx-background-radius: 5 5 0 0, 4 4 0 0, 3 3 0 0;
+    -fx-padding: 0.166667em 0.833333em 0.25em 0.833333em; /* 2 10 3 10 */
+}
+
+.titled-pane:focused > .title
+{
+    -fx-color: #ffc6c6;
+    -fx-background-color: #ffa3a3;
+}
+
+.green-arrow:focused > .title
+{
+    -fx-color: #e4ffc6;
+    -fx-background-color: #c0ff7c;
+}
+.normal-arrow:focused > .title
+{
+    -fx-color: #f2f2f2;
+    -fx-background-color: #d1d1d1;
+}
+
+.titled-pane > .title > .arrow-button
+{
+    -fx-background-color: null;
+    -fx-background-insets: 0;
+    -fx-background-radius: 0;
+    -fx-padding: 0.0em 0.25em 0.0em 0.0em; /* 0 3 0 0 */
+}
+
+.titled-pane > .title > .arrow-button .arrow
+{
+    -fx-background-color: red, red;
+    -fx-background-insets: 1 0 -1 0, 0;
+    -fx-padding: 0.65em 0.626em 0.5em 0.625em; /* 3 3.75 3 3.75 */
+    -fx-shape: "M 0 0 h 7 l -3.5 4 z";
+}
+
+.titled-pane > .title > .arrow-button .arrow
+{
+    -fx-background-color: red, red;
+    -fx-background-insets: 1 0 -1 0, 0;
+    -fx-padding: 0.65em 0.626em 0.5em 0.625em; /* 3 3.75 3 3.75 */
+    -fx-shape: "M 0 0 h 7 l -3.5 4 z";
+}
+
+.titled-pane:collapsed > .title > .arrow-button .arrow
+{
+    -fx-rotate: -90;
+}
+
+.normal-arrow > .title > .arrow-button .arrow
+{
+    -fx-background-color: black, black;
+    -fx-background-insets: 1 0 -1 0, 0;
+    -fx-padding: 0.65em 0.626em 0.5em 0.625em; /* 3 3.75 3 3.75 */
+    -fx-shape: "M 0 0 h 7 l -3.5 4 z";
+}
+
+.normal-arrow > .title
+{
+    -fx-background-color: -fx-box-border, -fx-inner-border, -fx-body-color;
+    -fx-background-insets: 0, 1, 2;
+    -fx-background-radius: 5 5 0 0, 4 4 0 0, 3 3 0 0;
+    -fx-padding: 0.166667em 0.833333em 0.25em 0.833333em; /* 2 10 3 10 */
+}
+
+.green-arrow > .title > .arrow-button .arrow
+{
+    -fx-background-color: green, green;
+    -fx-background-insets: 1 0 -1 0, 0;
+    -fx-padding: 0.65em 0.626em 0.5em 0.625em; /* 3 3.75 3 3.75 */
+    -fx-shape: "M 0 0 h 7 l -3.5 4 z";
 }
