--- a/src/View/choosePatient.fxml
+++ b/src/View/choosePatient.fxml
@@ -19,10 +19,10 @@
          <children>
             <Label layoutX="14.0" layoutY="70.0" text="Keresés:" AnchorPane.topAnchor="70.0" />
             <TextField id="filterField" fx:id="filterField" layoutX="77.0" layoutY="65.0" prefHeight="26.0" prefWidth="256.0" promptText="Név/Születési dátum" AnchorPane.topAnchor="65.0" />
-            <Button layoutX="11.0" layoutY="137.0" mnemonicParsing="false" onMouseClicked="#selectPatient" prefHeight="76.0" prefWidth="174.0" text="Kiválaszt" AnchorPane.topAnchor="140.0" />
-            <Button layoutX="11.0" layoutY="268.0" mnemonicParsing="false" prefHeight="76.0" prefWidth="174.0" text="Töröl" AnchorPane.bottomAnchor="20.0" />
-            <Button layoutX="11.0" layoutY="233.0" mnemonicParsing="false" onMouseClicked="#addNewPatient" prefHeight="76.0" prefWidth="174.0" text="Új páciens felvétele" AnchorPane.topAnchor="250.0" />
-            <Button layoutX="205.0" layoutY="420.0" mnemonicParsing="false" onMouseClicked="#backToMainManu" prefHeight="76.0" prefWidth="174.0" text="Vissza a Főmenübe" AnchorPane.bottomAnchor="20.0" />
+            <Button layoutX="11.0" layoutY="137.0" minHeight="90.0" minWidth="180.0" mnemonicParsing="false" onMouseClicked="#selectPatient" styleClass="green" text="Kiválaszt" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="140.0" />
+            <Button layoutX="11.0" layoutY="268.0" minHeight="90.0" minWidth="180.0" mnemonicParsing="false" onMouseClicked="#deletePatient" styleClass="red" text="Töröl" AnchorPane.bottomAnchor="130.0" AnchorPane.leftAnchor="20.0" />
+            <Button layoutX="11.0" layoutY="233.0" minHeight="90.0" minWidth="180.0" mnemonicParsing="false" onMouseClicked="#addNewPatient" styleClass="blue" text="Új páciens" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="250.0" />
+            <Button layoutX="205.0" layoutY="420.0" minHeight="90.0" minWidth="180.0" mnemonicParsing="false" onMouseClicked="#backToMainManu" styleClass="dark-grey" text="Vissza a Főmenübe" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" />
          </children></AnchorPane>
   </items>
 </SplitPane>
