--- a/src/View/startScreen.fxml
+++ b/src/View/startScreen.fxml
@@ -5,13 +5,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="main" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewControllers.StartController">
+<AnchorPane fx:id="main" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewControllers.StartController">
    <children>
-      <VBox id="background" fx:id="background" alignment="CENTER" styleClass="background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox id="background" fx:id="background" alignment="CENTER" spacing="100.0" styleClass="background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Button mnemonicParsing="false" onMouseClicked="#getchoosePatientScreen" prefHeight="100.0" prefWidth="400.0" styleClass="dark-grey" text="Betegek kezelése">
                <VBox.margin>
-                  <Insets bottom="100.0" />
+                  <Insets />
                </VBox.margin>
             </Button>
             <Button mnemonicParsing="false" onMouseClicked="#getStartScreen" prefHeight="100.0" prefWidth="400.0" styleClass="dark-grey" text="Statisztika">
@@ -19,6 +19,7 @@
                   <Insets />
                </VBox.margin>
             </Button>
+            <Button layoutX="110.0" layoutY="310.0" mnemonicParsing="false" onMouseClicked="#getSetting" prefHeight="100.0" prefWidth="400.0" styleClass="dark-grey" text="Beállítások" />
          </children>
       </VBox>
    </children>
