--- a/src/View/treatment.fxml
+++ b/src/View/treatment.fxml
@@ -8,10 +8,11 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.TextFlow?>
 
-<AnchorPane id="anc" fx:id="anc" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewControllers.TreatmentController">
+<AnchorPane id="anc" fx:id="anc" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewControllers.TreatmentController">
    <children>
       <StackPane id="treatmentStackPane1" fx:id="treatmentStackPane1" prefHeight="598.0" prefWidth="800.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -64,8 +65,12 @@
                         </TitledPane>
                     </panes>
                   </Accordion>
-                  <DatePicker id="treatmentDatePicker" fx:id="treatmentDatePicker" editable="false" prefHeight="26.0" prefWidth="160.0" AnchorPane.leftAnchor="140.0" AnchorPane.topAnchor="10.0" />
-                  <Label text="Kezelés időpontja:" AnchorPane.topAnchor="15.0" />
+                  <HBox alignment="CENTER" layoutY="10.0" spacing="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="10.0">
+                     <children>
+                        <Label text="Kezelés időpontja:" />
+                        <DatePicker id="treatmentDatePicker" fx:id="treatmentDatePicker" prefWidth="180.0" />
+                     </children>
+                  </HBox>
                </children></AnchorPane>
          </children>
       </StackPane>
