--- a/src/View/startScreen.fxml
+++ b/src/View/startScreen.fxml
@@ -5,9 +5,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane fx:id="main" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewControllers.StartController">
+<AnchorPane fx:id="main" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewControllers.StartController">
    <children>
-      <VBox id="background" fx:id="background" alignment="CENTER" spacing="100.0" styleClass="background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <VBox id="backgroundVbox" fx:id="backgroundVBox" alignment="CENTER" spacing="100.0" styleClass="background" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Button mnemonicParsing="false" onMouseClicked="#getchoosePatientScreen" prefHeight="100.0" prefWidth="400.0" styleClass="dark-grey" text="Betegek kezelése">
                <VBox.margin>
