--- a/src/View/statistic.fxml
+++ b/src/View/statistic.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.VBox?>
 
-<SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewControllers.StatisticController">
+<SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewControllers.StatisticController">
    <items>
       <ScrollPane fx:id="statScrollPane" fitToHeight="true" fitToWidth="true" prefHeight="632.0" prefWidth="1012.0">
          <content>
@@ -18,10 +18,27 @@
             </VBox>
          </content>
       </ScrollPane>
-      <VBox alignment="CENTER" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0" prefWidth="100.0">
+      <VBox alignment="CENTER" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="41.0" prefWidth="100.0">
          <children>
-            <Button mnemonicParsing="false" onMouseClicked="#getMainMenu" styleClass="dark-grey" text="Főnenű" />
+            <Button mnemonicParsing="false" onMouseClicked="#getMainMenu" styleClass="dark-grey" text="Főmenű" />
          </children>
       </VBox>
    </items>
 </SplitPane>
+
+
+5 3 8
+
+0 0 8
+
+5 0 3
+
+2 3 3
+
+2 0 6
+
+0 2 6
+
+5 2 1
+
+4 3 1
