--- a/src/View/view.css
+++ b/src/View/view.css
@@ -8,7 +8,7 @@
     -fx-background-insets: 0,1,4,5,6;
     -fx-background-radius: 9,8,5,4,3;
     -fx-padding: 10 20 10 20;
-    -fx-font-family: "Helvetica";
+    -fx-font-family: "Arial";
     -fx-font-size: 18px;
     -fx-font-weight: bold;
     -fx-text-fill: white;
@@ -27,7 +27,7 @@
     -fx-background-insets: 0,1,4,5,6;
     -fx-background-radius: 9,8,5,4,3;
     -fx-padding: 10 20 10 20;
-    -fx-font-family: "Helvetica";
+    -fx-font-family: "Arial";
     -fx-font-size: 18px;
     -fx-font-weight: bold;
     -fx-text-fill: black;
@@ -46,7 +46,7 @@
     -fx-background-insets: 0,1,4,5,6;
     -fx-background-radius: 9,8,5,4,3;
     -fx-padding: 10 20 10 20;
-    -fx-font-family: "Helvetica";
+    -fx-font-family: "Arial";
     -fx-font-size: 18px;
     -fx-font-weight: bold;
     -fx-text-fill: black;
@@ -64,7 +64,7 @@
     -fx-background-insets: 0,1,4,5,6;
     -fx-background-radius: 9,8,5,4,3;
     -fx-padding: 10 20 10 20;
-    -fx-font-family: "Helvetica";
+    -fx-font-family: "Arial";
     -fx-font-size: 18px;
     -fx-font-weight: bold;
     -fx-text-fill: black;
@@ -76,19 +76,55 @@
 }
 
 .background {
-    -fx-background-image: url("img/7.jpg");
     -fx-background-repeat: no-repeat;
     -fx-background-size: stretch;
 }
 
+.background1 {
+    -fx-background-image: url("img/1.jpg");
+}
+.background2 {
+    -fx-background-image: url("img/2.jpg");
+}
+.background3 {
+    -fx-background-image: url("img/3.jpg");
+}
+.background4{
+    -fx-background-image: url("img/4.jpg");
+}
+.background5{
+    -fx-background-image: url("img/5.jpg");
+}
+.background6{
+    -fx-background-image: url("img/6.jpg");
+}
+.background7{
+    -fx-background-image: url("img/7.jpg");
+}
+.background8{
+    -fx-background-image: url("img/8.jpg");
+}
+.background9{
+    -fx-background-image: url("img/9.jpg");
+}
+.background10{
+    -fx-background-image: url("img/10.jpg");
+}
+.background11 {
+    -fx-background-image: url("img/11.jpg");
+}
+.background12{
+    -fx-background-image: url("img/12.jpg");
+}
+
 .male-image{
-    -fx-background-image: url("img/male.jpg");
+    -fx-background-image: url("img/male.png");
     -fx-background-repeat: no-repeat;
     -fx-background-size: stretch;
 }
 
 .female-image{
-    -fx-background-image: url("img/female.jpg");
+    -fx-background-image: url("img/female.png");
     -fx-background-repeat: no-repeat;
     -fx-background-size: stretch;
 }
