--- a/src/View/dropImage.fxml
+++ b/src/View/dropImage.fxml
@@ -2,10 +2,8 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewControllers.DropImageController">
    <children>
       <ImageView id="dropImageimageView" fx:id="dropImageimageView" fitHeight="400.0" fitWidth="500.0" layoutX="77.0" layoutY="66.0" onDragDropped="#setOnDragDropped" onDragOver="#setOnDragOver" pickOnBounds="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="107.0" />
