--- a/src/View/managePatient.fxml
+++ b/src/View/managePatient.fxml
@@ -1,33 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
 <?import javafx.collections.FXCollections?>
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Accordion?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.TextFlow?>
-
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
+<?import java.lang.*?>
 <SplitPane id="mainSplitPane" fx:id="mainSplitPane" dividerPositions="0.5" prefHeight="600.0" prefWidth="1041.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewControllers.ManagePatientController">
   <items>
       <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.9626307922272048" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
@@ -607,7 +587,7 @@
                                                 <TextArea id="clinicalHistory6TextArea" fx:id="clinicalHistory6TextArea" prefHeight="200.0" prefWidth="200.0" wrapText="true" />
                                              </content>
                                           </TitledPane>
-                                          <TitledPane fx:id="titledPane10" animated="false" layoutX="10.0" layoutY="590.0" text="Gyógyszerérzékenyésg">
+                                          <TitledPane fx:id="titledPane10" animated="false" layoutX="10.0" layoutY="590.0" text="Gyógyszerérzékenyéség">
                                              <content>
                                                 <TextArea id="clinicalHistory7TextArea" fx:id="clinicalHistory7TextArea" prefHeight="200.0" prefWidth="200.0" wrapText="true" />
                                              </content>
