--- a/src/View/choosePatient.fxml
+++ b/src/View/choosePatient.fxml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<SplitPane dividerPositions="0.29797979797979796" prefHeight="518.0" prefWidth="824.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewControllers.ChoosePatientController">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+
+<SplitPane dividerPositions="0.29797979797979796" prefHeight="518.0" prefWidth="824.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewControllers.ChoosePatientController">
   <items>
-    <AnchorPane minWidth="350.0">
+    <AnchorPane minWidth="350.0" onKeyPressed="#keyPressedAction">
          <children>
-             <TableView id="patientsTable" fx:id="patientsTable" layoutX="-13.0" layoutY="14.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+             <TableView id="patientsTable" fx:id="patientsTable" layoutX="-13.0" layoutY="14.0" onKeyPressed="#keyPressedAction" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                  <placeholder><Label text="Nincs találat páciensre" /></placeholder>
              </TableView>
          </children></AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="400.0">
          <children>
             <Label layoutX="14.0" layoutY="70.0" text="Keresés:" AnchorPane.topAnchor="70.0" />
-            <TextField id="filterField" fx:id="filterField" layoutX="77.0" layoutY="65.0" prefHeight="26.0" prefWidth="256.0" promptText="Név/Születési dátum" AnchorPane.topAnchor="65.0" />
-            <Button layoutX="11.0" layoutY="137.0" minHeight="90.0" minWidth="180.0" mnemonicParsing="false" onMouseClicked="#selectPatient" styleClass="green" text="Kiválaszt" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="140.0" />
-            <Button layoutX="11.0" layoutY="268.0" minHeight="90.0" minWidth="180.0" mnemonicParsing="false" onMouseClicked="#deletePatient" styleClass="red" text="Töröl" AnchorPane.bottomAnchor="130.0" AnchorPane.leftAnchor="20.0" />
+            <TextField id="filterField" fx:id="filterField" layoutX="77.0" layoutY="65.0" onKeyPressed="#keyPressedInSearchBox" prefHeight="26.0" prefWidth="256.0" promptText="Név/Születési dátum" AnchorPane.topAnchor="65.0" />
+            <Button layoutX="11.0" layoutY="137.0" minHeight="90.0" minWidth="180.0" mnemonicParsing="false" onMouseClicked="#selectPatientByClick" styleClass="green" text="Kiválaszt" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="140.0" />
+            <Button layoutX="11.0" layoutY="268.0" minHeight="90.0" minWidth="180.0" mnemonicParsing="false" onMouseClicked="#deletePatientByClick" styleClass="red" text="Töröl" AnchorPane.bottomAnchor="130.0" AnchorPane.leftAnchor="20.0" />
             <Button layoutX="11.0" layoutY="233.0" minHeight="90.0" minWidth="180.0" mnemonicParsing="false" onMouseClicked="#addNewPatient" styleClass="blue" text="Új páciens" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="250.0" />
             <Button layoutX="205.0" layoutY="420.0" minHeight="90.0" minWidth="180.0" mnemonicParsing="false" onMouseClicked="#backToMainManu" styleClass="dark-grey" text="Főmenü" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" />
          </children></AnchorPane>
