--- a/src/View/managePatient.fxml
+++ b/src/View/managePatient.fxml
@@ -353,11 +353,11 @@
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                 </columnConstraints>
                                 <rowConstraints>
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="85.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="67.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="59.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="69.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="158.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
                                     <ScrollPane fitToHeight="true" fitToWidth="true" styleClass="transparent" GridPane.columnIndex="1" GridPane.rowIndex="4">
@@ -438,7 +438,7 @@
                                        <content>
                                           <ScrollPane fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" styleClass="transparent" vbarPolicy="NEVER">
                                              <content>
-                                                <TextFlow id="symptomsTextFlow3" fx:id="symptomsTextFlow3" prefHeight="200.0" prefWidth="200.0" />
+                                                <TextFlow id="symptomsTextFlow3" fx:id="symptomsTextFlow3" prefHeight="53.0" prefWidth="254.0" />
                                              </content>
                                           </ScrollPane>
                                        </content>
@@ -512,7 +512,6 @@
                         </AnchorPane>
                   </content>
                 </Tab>
-                  <Tab id="meridiansTab" fx:id="meridiansTab" text="Meridiánok" />
                   <Tab text="Pszichikum">
                      <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
@@ -853,7 +852,7 @@
                                                             </VBox>
                                                             <VBox spacing="10.0" GridPane.columnIndex="1">
                                                                <children>
-                                                                  <Label style="-fx-font-style: italic;" text="Beteg diagnózisai:">
+                                                                  <Label style="-fx-font-style: italic;" text="Páciens diagnózisai:">
                                                                      <VBox.margin>
                                                                         <Insets left="10.0" />
                                                                      </VBox.margin>
@@ -935,28 +934,7 @@
                      </content>
                   </Tab>
                   <Tab id="fiveElementsTab" fx:id="fiveElementsTab" onSelectionChanged="#fiveElementsSelected" text="5 Elem" />
-                  <Tab text="Fül">
-                     <content>
-                        <AnchorPane>
-                           <children>
-                              <ScrollPane id="earImageScrollPane" fx:id="earImageScrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" pannable="true" prefHeight="527.0" prefWidth="516.0" vbarPolicy="NEVER" AnchorPane.bottomAnchor="211.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                                 <content>
-                                    <ImageView id="earImageView" fx:id="earImageView" onMouseClicked="#openImage" pickOnBounds="true" />
-                                 </content>
-                                 <padding>
-                                    <Insets bottom="-0.1" />
-                                 </padding>
-                              </ScrollPane>
-                              <VBox alignment="CENTER" AnchorPane.bottomAnchor="170.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                                 <children>
-                                    <Button id="addEarImageButton" fx:id="addEarImageButton" mnemonicParsing="false" onMouseClicked="#addImage" styleClass="green, button-font" text="Kép módosítása" />
-                                 </children>
-                              </VBox>
-                              <TextArea id="earTextArea" fx:id="earTextArea" layoutX="135.0" layoutY="301.0" prefHeight="170.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
-                           </children>
-                        </AnchorPane>
-                     </content>
-                  </Tab>
+                  <Tab id="meridiansTab" fx:id="meridiansTab" text="Meridiánok" />
                   <Tab text="Nyelv">
                      <content>
                         <AnchorPane>
@@ -975,6 +953,28 @@
                                  </children>
                               </VBox>
                               <TextArea id="tongueTextArea" fx:id="tongueTextArea" layoutX="135.0" layoutY="301.0" prefHeight="170.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
+                           </children>
+                        </AnchorPane>
+                     </content>
+                  </Tab>
+                  <Tab text="Fül">
+                     <content>
+                        <AnchorPane>
+                           <children>
+                              <ScrollPane id="earImageScrollPane" fx:id="earImageScrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" pannable="true" prefHeight="527.0" prefWidth="516.0" vbarPolicy="NEVER" AnchorPane.bottomAnchor="211.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                 <content>
+                                    <ImageView id="earImageView" fx:id="earImageView" onMouseClicked="#openImage" pickOnBounds="true" />
+                                 </content>
+                                 <padding>
+                                    <Insets bottom="-0.1" />
+                                 </padding>
+                              </ScrollPane>
+                              <VBox alignment="CENTER" AnchorPane.bottomAnchor="170.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                                 <children>
+                                    <Button id="addEarImageButton" fx:id="addEarImageButton" mnemonicParsing="false" onMouseClicked="#addImage" styleClass="green, button-font" text="Kép módosítása" />
+                                 </children>
+                              </VBox>
+                              <TextArea id="earTextArea" fx:id="earTextArea" layoutX="135.0" layoutY="301.0" prefHeight="170.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
                            </children>
                         </AnchorPane>
                      </content>
