--- a/src/View/meridians.fxml
+++ b/src/View/meridians.fxml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Accordion?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+
 <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="540.0" prefWidth="754.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ViewControllers.MeridiansController">
    <children>
       <StackPane id="meridianStackPane1" fx:id="meridianStackPane1" prefHeight="540.0" prefWidth="754.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -17,7 +24,7 @@
                <children>
                   <Accordion GridPane.vgrow="ALWAYS">
                      <panes>
-                        <TitledPane id="normalMeridiansTitledPane" fx:id="normalMeridiansTitledPane" animated="false" styleClass="normal-arrow" text="A 12 szabályos csatorna kóros tünetei">
+                        <TitledPane id="normalMeridiansTitledPane" fx:id="normalMeridiansTitledPane" animated="false" maxWidth="-Infinity" prefWidth="402.0" styleClass="normal-arrow" text="A 12 szabályos csatorna kóros tünetei">
                            <content>
                               <Accordion id="accordion1" fx:id="accordion1">
                                 <panes>
